--- a/demo/src/assets/i18n/en.json
+++ b/demo/src/assets/i18n/en.json
@@ -1,13 +1,26 @@
 {
   "cronEditor": {
     "lbl": {
-      "at": "alle",
-      "every": "Ogni",
-      "daily": "Giornaliero",
-      "days": "Giorni",
-      "hourly": "Orario",
-      "hours": "Ore",
-      "minutes": "Minuti",
+      "advanced": "Advanced",
+      "at": "at",
+      "atTime": "at the hour",
+      "every": "Every",
+      "daily": "Daily",
+      "day": "Day",
+      "days": "Days",
+      "expression": "Cron expression",
+      "fromMonthday": "From month day",
+      "daysAndFrom": "days from",
+      "firstWeekDay": "first week",
+      "fromDate": "from",
+      "hourly": "Hourly",
+      "hours": "Hours",
+      "last": "last",
+      "lastDay": "last day",
+      "lastWeekDay": "last week",
+      "minutes": "Minutes",
+      "month": "Month",
+      "monthPlural": "Months (from the month of january)",
       "months": {
         "january": "january",
         "february": "february",
@@ -22,15 +35,31 @@
         "november": "november",
         "december": "december"
       },
-      "seconds": "Secondi",
-      "weekDays": "Week Day (MON-FRI) at",
-      "monday": "monday",
-      "tuesday": "tuesday",
-      "wednesday": "wednesday",
-      "thursday": "thursday",
-      "friday": "friday",
-      "saturday": "saturday",
-      "sunday": "sunday"
+      "monthly": "Monthly",
+      "of": "of",
+      "ofEvery": "of every",
+      "onThe": "On the",
+      "onTheDouble": "On the",
+      "onTheDoubleMale": "On the",
+      "onTheTriple": "On the",
+      "onTheFeminine": "On the",
+      "seconds": "Seconds",
+      "week": "Week",
+      "weekDays": "From monday to friday at",
+      "yearly": "Yearly",
+      "first": "first",
+      "second": "second",
+      "third": "third",
+      "fourth": "fourth",
+      "fifth": "fifth",
+      "MON": "monday",
+      "TUE": "tuesday",
+      "WED": "wednesday",
+      "THU": "thursday",
+      "FRI": "friday",
+      "SAT": "saturday",
+      "SUN": "sunday",
+      "weekly": "Weekly"
     }
   }
 }
