quartz and standard working

--- a/demo/src/assets/i18n/it.json
+++ b/demo/src/assets/i18n/it.json
@@ -12,6 +12,7 @@
       "fromMonthday": "Dal giorno del mese",
       "daysAndFrom": "giorni dal",
       "firstWeekDay": "prima settimana",
+      "flavor": "tipo",
       "fromDate": "Dal",
       "hourly": "Ore",
       "hours": "Ore",
@@ -44,6 +45,7 @@
       "onTheTriple": "Il/la/l'",
       "onTheFeminine": "La",
       "seconds": "Secondi",
+      "selectCronFlavor": "Seleziona il tipo di cron",
       "week": "Settimana",
       "weekDays": "Da lunedì a venerdì alle",
       "yearly": "Annuale",
