--- a/demo/src/assets/i18n/en.json
+++ b/demo/src/assets/i18n/en.json
@@ -44,6 +44,7 @@
       "onTheTriple": "On the",
       "onTheFeminine": "On the",
       "seconds": "Seconds",
+      "selectCronFlavor": "Select your cron flavor",
       "week": "Week",
       "weekDays": "From monday to friday at",
       "yearly": "Yearly",
