language switch done

--- a/demo/src/assets/i18n/en.json
+++ b/demo/src/assets/i18n/en.json
@@ -12,9 +12,11 @@
       "fromMonthday": "From month day",
       "daysAndFrom": "days from",
       "firstWeekDay": "first week",
+      "flavor": "Flavor",
       "fromDate": "from",
       "hourly": "Hourly",
       "hours": "Hours",
+      "language": "Language",
       "last": "last",
       "lastDay": "last day",
       "lastWeekDay": "last week",
