--- a/demo/src/assets/i18n/it.json
+++ b/demo/src/assets/i18n/it.json
@@ -12,10 +12,11 @@
       "fromMonthday": "Dal giorno del mese",
       "daysAndFrom": "giorni dal",
       "firstWeekDay": "prima settimana",
-      "flavor": "tipo",
+      "flavor": "Tipo",
       "fromDate": "Dal",
       "hourly": "Ore",
       "hours": "Ore",
+      "language": "Lingua",
       "last": "ultimo/a",
       "lastDay": "ultimo giorno",
       "lastWeekDay": "ultima settimana",
